--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <section>
             <!-- Title -->
             <header id="home-page">
-                <h1>Hi <span id="user-greeting">User</span>, Welcome to our website</h1>
+                <h1>Hi <span id="greeting">User</span>, Welcome to our website</h1>
                 <p>Lorem ipsum dolor sit amet adipiscing...</p>
+                <br />
             </header>
 
             <div class="banner-image banner-image-1"></div>
@@ -51,7 +52,16 @@
                 <h1>Our Profile</h1>
             </header>
 
-            <div class="content"></div>
+            <div class="content">
+                <h4>Lorem Ipsum</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus massa leo.
+                </p>
+            </div>
         </section>
 
         <!-- Portfolio -->
